--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+# Ignoring idea files
 *.idea
+*.iml
